# bluetoothLE

./: .gitignore  BLE_Config.json  CMakeLists.txt  README.md  blue.sh  reset_bluetooth.sh  test_gatt.py
include/: BLEPeripheralManager.h  BleAdvertisement.h  BleApplication.h  BleConstants.h  BlueZConstants.h  BlueZUtils.h  BluetoothAdapter.h  ConnectionManager.h  DBusConnection.h  DBusError.h  DBusInterface.h  DBusMessage.h  DBusMethod.h  DBusName.h  DBusObject.h  DBusObjectPath.h  DBusTypes.h  DBusXml.h  DataSimulator.h  GattAdvertisement.h  GattApplication.h  GattCallbacks.h  GattCharacteristic.h  GattDescriptor.h  GattObject.h  GattProperty.h  GattService.h  GattTypes.h  GattUuid.h  Gobbledegook.h  HciAdapter.h  HciSocket.h  IGattNode.h  LEAdvertisement.h  Logger.h  Mgmt.h  SDBusInterface.h  SDBusObject.h  SDBusProxy.h  Server.h  (+1 more)
include/dbus/: SDBusConnection.h  SDBusError.h  SDBusObject.h
include/xml/: GattCharacteristic1.h  GattCharacteristic1.xml  GattDescriptor1.h  GattDescriptor1.xml  GattService1.h  GattService1.xml  LEAdvertisement1.h  LEAdvertisement1.xml  ObjectManager.h  ObjectManager.xml  Propertise.xml  README.md
src/: BLEPeripehralManager.cpp  BLEPeripheralManager.cpp  BleAdvertisement.cpp  BleApplication.cpp  BlueZUtils.cpp  BluetoothAdapter.cpp  ConnectionManager.cpp  DBusConnection.cpp  DBusError.cpp  DBusInterface.cpp  DBusMessage.cpp  DBusMethod.cpp  DBusName.cpp  DBusObject.cpp  DBusXml.cpp  DataSimulator.cpp  GattAdvertisement.cpp  GattApplication.cpp  GattCharacteristic.cpp  GattDescriptor.cpp  GattObject.cpp  GattProperty.cpp  GattService.cpp  GattTypes.cpp  HciAdapter.cpp  HciSocket.cpp  LEAdvertisement.cpp  Logger.cpp  Mgmt.cpp  SDBusConnection.cpp  SDBusError.cpp  SDBusInterface.cpp  SDBusObject.cpp  SDBusProxy.cpp  Server.cpp  Utils.cpp  main.cpp
src/dbus/: SDBusConnection.cpp  SDBusError.cpp  SDBusObject.cpp  SDBusProxy.cpp
test/: BlueZIntegrationTest.cpp  CMakeLists.txt  ConnectionManagerTest.cpp  DBusConnectionTest.cpp  DBusErrorTest.cpp  DBusMessageTest.cpp  DBusObjectPathTest.cpp  DBusObjectTest.cpp  DBusTestEnvironment.cpp  DBusTestEnvironment.h  DBusXmlTest.cpp  GattAdvertisementTest.cpp  GattApplicationTest.cpp  GattCharacteristicTest.cpp  GattDescriptorTest.cpp  GattIntegrationTest.cpp  GattServiceTest.cpp  GattTypesTest.cpp  HciAdapterTest.cpp  HciSocketTest.cpp  LEAdvertisementTest.cpp  LoggerTest.cpp  MgmtTest.cpp  UtilsTest.cpp  main.cpp  obj-manager-test.h  test.cpp
